--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music App</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-solid-"> -->
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 
         <div class="player">
             <div class="img-area">
-                <img src="assets/images/wp2080976.jpg" alt="">
+                <img id="image" src="" alt="">
             </div>
 
             <div class="song-details">
@@ -37,7 +37,7 @@
                 </div>
                 <div class="progress-area">
                     <div class="progress-bar">
-                        <audio id="main-audio" src="assets/songs/13 Niska - Chasse à l homme.mp3"></audio>
+                        <audio id="main-audio" src=""></audio>
                     </div>
                 </div>
             </div>
@@ -57,6 +57,11 @@
             </div>
         </div>
     </div>
+
+    <!-- <div>
+        <i class="fi fi-rr-list"></i>
+        <img src="assets/images/547117-bigthumbnail.jpg" alt="">
+    </div> -->
     
 
 <script src="script.js"></script>    
